[package]
name = "path_finder"
version = "0.1.0"
edition = "2021"
default-run = "grapher"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.5.0"
ordered-float = "4.6.0"
rstar = { version = "0.12.2", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.138"
wasm-bindgen = "0.2.100"
